# xcc-tiny-otf

./: .gitignore  README.md  docker-compose.yaml  oop_design.md  pyproject.toml
data/employee/2025-06-04/: raw_20250604121458.parquet
data/test_table/2025-06-04/: raw_20250604132608.parquet
src/tiny_otf/: __init__.py  config.py  engine.py  sql_parser.py
src/tiny_otf/storage/: storage.py
src/tiny_otf/table_catalog/: table_catalog.py  table_metadata.json
tests/: parsed_sql_example.txt  parsed_sql_example_create.txt  parsed_sql_example_ctas.txt  parsed_sql_example_insert.txt  test.py
